--- a/DayOfChoice/Base.lproj/Main.storyboard
+++ b/DayOfChoice/Base.lproj/Main.storyboard
@@ -42,7 +42,6 @@
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="vote" destination="BYZ-38-t0r" eventType="touchUpInside" id="jCW-BL-5cJ"/>
-                                    <segue destination="05R-sv-N6e" kind="show" id="El7-Ze-OQ5"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ns5-0i-NpO">
@@ -80,6 +79,7 @@
                         <outlet property="select1Btn" destination="GjO-dm-KNh" id="Z9d-Fl-BVp"/>
                         <outlet property="select2Btn" destination="ns5-0i-NpO" id="pqf-Sl-Mhp"/>
                         <outlet property="voteBtn" destination="SES-eI-Yc1" id="N7L-i0-yvS"/>
+                        <segue destination="05R-sv-N6e" kind="show" identifier="toResult" id="vL7-IL-1EK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -175,7 +175,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="oYQ-Al-8ij">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CustomCell" id="oYQ-Al-8ij">
                                         <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="4SZ-WG-HJw">
