--- a/DayOfChoice/View/Base.lproj/Main.storyboard
+++ b/DayOfChoice/View/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EwO-Xb-sTz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1936.6412213740457" y="-892.25352112676057"/>
+            <point key="canvasLocation" x="1813" y="-909"/>
         </scene>
         <!--Log View Controller-->
         <scene sceneID="9qf-yi-dJu">
@@ -390,6 +390,9 @@
                     <navigationItem key="navigationItem" id="5os-Vu-vXS">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="gearshape.fill" catalog="system" id="Mwz-pb-4DO">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="changeName" destination="gas-XY-uRT" id="1WZ-S5-5ag"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
